/*
Copyright 2022 The Matrix.org Foundation C.I.C.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

import React from "react";
import { fireEvent, render } from "@testing-library/react";

import { DeviceExpandDetailsButton } from "../../../../../src/components/views/settings/devices/DeviceExpandDetailsButton";

describe("<DeviceExpandDetailsButton />", () => {
    const defaultProps = {
        isExpanded: false,
        onClick: jest.fn(),
    };
    const getComponent = (props = {}) => <DeviceExpandDetailsButton {...defaultProps} {...props} />;

    it("renders when not expanded", () => {
        const { container } = render(getComponent());
        expect({ container }).toMatchSnapshot();
    });

    it("renders when expanded", () => {
        const { container } = render(getComponent({ isExpanded: true }));
        expect({ container }).toMatchSnapshot();
    });

    it("calls onClick", () => {
        const onClick = jest.fn();
        const { getByTestId } = render(getComponent({ "data-testid": "test", onClick }));
        fireEvent.click(getByTestId("test"));

        expect(onClick).toHaveBeenCalled();
    });
});
